logs/permm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/permm'...
Listing './lib/python3.5/site-packages/permm/analyses'...
Listing './lib/python3.5/site-packages/permm/analyses/cycles'...
Listing './lib/python3.5/site-packages/permm/analyses/history'...
Compiling './lib/python3.5/site-packages/permm/analyses/history/core.py'...
***   File "./lib/python3.5/site-packages/permm/analyses/history/core.py", line 116
    except (KeyError, NameError), (e):
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/permm/analyses/net_balance'...
Compiling './lib/python3.5/site-packages/permm/analyses/net_balance/PhyTableMaker.py'...
***   File "./lib/python3.5/site-packages/permm/analyses/net_balance/PhyTableMaker.py", line 96
    except KeyError, strerror:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/permm/analyses/network'...
Compiling './lib/python3.5/site-packages/permm/analyses/network/core.py'...
***   File "./lib/python3.5/site-packages/permm/analyses/network/core.py", line 51
    print traceable
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/permm/core'...
Compiling './lib/python3.5/site-packages/permm/core/IPRArray.py'...
***   File "./lib/python3.5/site-packages/permm/core/IPRArray.py", line 126
    raise TypeError, "It is unclear how to %s IPR and %s; scalars, arrays, species and processes should have meaningful results" % (operation, type(rhs))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/permm/core/Mechanism.py'...
***   File "./lib/python3.5/site-packages/permm/core/Mechanism.py", line 402
    print net_rxn
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/permm/core/Reaction.py'...
***   File "./lib/python3.5/site-packages/permm/core/Reaction.py", line 109
    raise SyntaxError, "Reactions must match the following patter\n\n<%%d> stoic*spc ([+-] stoic*spc)* =[kjude]> [stoic*spc] ([+-] stoic*spc)*\n\n%s" % (rxn_str,)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/permm/core/Species.py'...
***   File "./lib/python3.5/site-packages/permm/core/Species.py", line 124
    raise TypeError, "Can only multiply species by reactions"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/permm/getmech.py'...
***   File "./lib/python3.5/site-packages/permm/getmech.py", line 13
    raise ImportError, "Mechanism you supplied is not a known mechanism and is not a file path to a definition"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/permm/graphing'...
Compiling './lib/python3.5/site-packages/permm/graphing/barplot.py'...
***   File "./lib/python3.5/site-packages/permm/graphing/barplot.py", line 42
    except KeyError, (m):
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/permm/graphing/timeseries.py'...
***   File "./lib/python3.5/site-packages/permm/graphing/timeseries.py", line 348
    except KeyError, detail:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/permm/guis'...
Compiling './lib/python3.5/site-packages/permm/guis/Simplewx.py'...
***   File "./lib/python3.5/site-packages/permm/guis/Simplewx.py", line 79
    print return_text
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/permm/mechanisms'...
Listing './lib/python3.5/site-packages/permm/models'...
Listing './lib/python3.5/site-packages/permm/models/camx'...
Listing './lib/python3.5/site-packages/permm/testdata'...
Listing './lib/python3.5/site-packages/permm-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
